--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "@pinia/nuxt": "^0.4.1",
+    "@popperjs/core": "^2.11.6",
+    "chart.js": "^3.9.1",
     "pinia": "^2.0.21",
     "prism-themes": "^1.9.0",
     "vee-validate": "^4.6.7",
